# journey

./: .gitignore  MERMAID_VISUALIZATION.md  README.md  package.json  tailwind.config.ts  test-mermaid-fixed.mjs
backend/: api_server.py  pyproject.toml  start_server.sh
backend/examples/: __init__.py  sample_with_descriptions.yaml
backend/examples/guided_meditation/: functions.py  guided_meditation_session.yaml
backend/examples/what_is_the_status_of_my_loan/: functions.py  what_is_the_status_of_my_loan.yaml
backend/src/journey/: __init__.py  action_registry.py  function_registry.py  orchestrator.py  tool_registry.py  utils.py
src/: index.css
src/components/workflow/: ActionOrValueSelector.tsx  ActionSelector.tsx  BlockEditDialog.tsx  FunctionCatalog.tsx  SimpleConditionEditor.tsx  VariableAutocomplete.tsx  WorkflowBlock.tsx  WorkflowBrowser.tsx  WorkflowCanvas.tsx  WorkflowEditor.tsx  WorkflowExecutor.tsx  WorkflowGraph.tsx  WorkflowNode.tsx  WorkflowSidebar.tsx
src/data/: sample-workflow.yaml
src/hooks/: useWorkflow.ts
src/lib/: api.ts
src/pages/: Index.tsx
src/types/: mermaid.d.ts  workflow.ts
src/utils/: actions.ts  variableTracking.ts  workflowToMermaid.ts  yaml.ts
