[project]
name = "journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "httptools>=0.6.4",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "uvicorn[standard]>=0.34.3",
    "uvloop>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/journey", "backend/tests"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "pytest-mock"
]
